<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>javafx.demo</groupId>
    <artifactId>javafx-demo-native</artifactId>
    <version>1.0.0</version>
    <name>JavaFX Native Demo</name>
    <description>JavaFX demo application made native with GraalVM.</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <junit.version>5.8.1</junit.version>
        <javafx.version>22</javafx.version>
        <javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
        <maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
        <maven.compiler.source>23</maven.compiler.source>
        <maven.compiler.target>23</maven.compiler.target>
        <maven.compiler.release>23</maven.compiler.release>
        <maven.plugin.validation>VERBOSE</maven.plugin.validation>
        <native.maven.plugin.version>0.10.3</native.maven.plugin.version>
        <local.repository>${user.home}/.m2/repository</local.repository>
        <target.os>win</target.os>
        <imageName>javafx-demo-native</imageName>
    </properties>

    <dependencies>
        <!-- JavaFX -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-swing</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <!-- JavaFX Misc -->
        <dependency>
            <groupId>org.controlsfx</groupId>
            <artifactId>controlsfx</artifactId>
            <version>11.2.1</version>
        </dependency>
        <dependency>
            <groupId>com.dlsc.formsfx</groupId>
            <artifactId>formsfx-core</artifactId>
            <version>11.6.0</version>
            <exclusions>
                <exclusion>
                    <groupId>org.openjfx</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.kordamp.bootstrapfx</groupId>
            <artifactId>bootstrapfx-core</artifactId>
            <version>0.4.0</version>
        </dependency>
        <dependency>
            <groupId>org.fxmisc.flowless</groupId>
            <artifactId>flowless</artifactId>
            <version>0.7.3</version>
        </dependency>
        <dependency>
            <groupId>org.fxmisc.wellbehaved</groupId>
            <artifactId>wellbehavedfx</artifactId>
            <version>0.3.3</version>
        </dependency>
        <dependency>
            <groupId>org.fxmisc.undo</groupId>
            <artifactId>undofx</artifactId>
            <version>2.1.1</version>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>native</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.graalvm.buildtools</groupId>
                        <artifactId>native-maven-plugin</artifactId>
                        <version>${native.maven.plugin.version}</version>
                        <executions>
                            <execution>
                                <id>build-native</id>
                                <goals>
                                    <goal>compile-no-fork</goal>
                                </goals>
                                <phase>package</phase>
                            </execution>
                            <execution>
                                <id>test-native</id>
                                <goals>
                                    <goal>test</goal>
                                </goals>
                                <phase>test</phase>
                            </execution>
                        </executions>
                        <configuration>
                            <verbose>true</verbose>
                            <skip>false</skip>
                            <imageName>${imageName}</imageName>
                            <fallback>false</fallback>
                            <agent>
                                <enabled>false</enabled>
                            </agent>
                            <buildArgs>
                                <buildArg>--module-path target/${imageName}-1.0.0.jar</buildArg>
                                <buildArg>-Ob</buildArg>
                                <buildArg>-march=native</buildArg>
                                <buildArg>--initialize-at-build-time=javafx.demo.graalvm/javafx.demo.graalvm.Main</buildArg>
                                <buildArg>--add-modules javafx.demo.graalvm</buildArg>
                                <buildArg>--add-modules javafx.base,javafx.graphics,javafx.fxml,javafx.controls,javafx.swing</buildArg>

                                <buildArg>--module javafx.demo.graalvm/javafx.demo.graalvm.Main</buildArg>

                                <buildArg>--module-path ${local.repository}/org/openjfx/javafx-base/22/javafx-base-22-${target.os}.jar</buildArg>
                                <buildArg>--module-path ${local.repository}/org/openjfx/javafx-graphics/22/javafx-graphics-22-${target.os}.jar</buildArg>
                                <buildArg>--module-path ${local.repository}/org/openjfx/javafx-controls/22/javafx-controls-22-${target.os}.jar</buildArg>
                                <buildArg>--module-path ${local.repository}/org/openjfx/javafx-fxml/22/javafx-fxml-22-${target.os}.jar</buildArg>
                                <buildArg>--module-path ${local.repository}/org/openjfx/javafx-swing/22/javafx-swing-22-${target.os}.jar</buildArg>

                                <buildArg>--module-path ${local.repository}/org/controlsfx/controlsfx/11.2.1/controlsfx-11.2.1.jar</buildArg>
                                <buildArg>--module-path ${local.repository}/com/dlsc/formsfx/formsfx-core/11.6.0/formsfx-core-11.6.0.jar</buildArg>
                                <buildArg>--module-path ${local.repository}/org/kordamp/bootstrapfx/bootstrapfx-core/0.4.0/bootstrapfx-core-0.4.0.jar</buildArg>
                                <buildArg>--module-path ${local.repository}/org/fxmisc/flowless/flowless/0.7.3/flowless-0.7.3.jar</buildArg>
                                <buildArg>--module-path ${local.repository}/org/fxmisc/wellbehaved/wellbehavedfx/0.3.3/wellbehavedfx-0.3.3.jar</buildArg>
                                <buildArg>--module-path ${local.repository}/org/fxmisc/undo/undofx/2.1.1/undofx-2.1.1.jar</buildArg>
                            </buildArgs>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.source}</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.4.2</version>
            </plugin>
        </plugins>
    </build>

    <developers>
        <developer>
            <id>llefevre</id>
            <name>Loïc Lefèvre</name>
            <organization>Oracle</organization>
            <organizationUrl>https://www.oracle.com</organizationUrl>
            <roles>
                <role>product manager</role>
            </roles>
        </developer>
    </developers>

</project>